<resources>
    <string name="app_name">Flyin Food</string>

    <!--- PARA FB -->
    <string name="facebook_app_id">485898725099796</string>
    <string name="fb_login_protocol_scheme">fb485898725099796</string>

    <!--- OTROS -->
    <string name="fb_login_name">INICIAR SESIÓN CON FACEBOOK</string>
    <string name="title_activity_main">FlyinFood</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!--- SLIDER LATERAL -->
    <string name="Restaurant">Restaurantes</string>
    <string name="HechoCasa">Hecho en Casa</string>
    <string name="Favoritos">Favoritos</string>
    <string name="Ofertas">Ofertas</string>
    <string name="Cuenta">Cuenta</string>
    <string name="Canjear">Canjear</string>
    <string name="MiCuenta">Mi Cuenta</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="Comunicate">Del Usuario</string>

    <!--- MAIN MUNE -->
    <string name="Buscar">Buscar</string>

    <string-array name="AB_TabsNames">
        <item>Top</item>
        <item>Carnes</item>
        <item>Criollo</item>
        <item>Bebidas</item>
        <item>Vegetarianos</item>
        <item>Postres</item>
    </string-array>

    <string-array name="Restaurant_TabsNames">
        <item>Top</item>
        <item>Cercanos</item>
        <item>Gourmet</item>
        <item>Familiar</item>
        <item>Vegano</item>
        <item>Buffet</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!--- PARA SLIDER LATERAL -->
    <string name="txtNombreUsuario">Nombre de Usuario</string>
    <string name="txtCorreoUsuario">Correo Usuario</string>
    <!--- FIN PARA SLIDER LATERAL -->

    <!--- PARA CONTENIDO DE PLATO -->
    <string name="txtNombrePlato">Nombre del Plato</string>
    <string name="txtCosto">S/. --------</string>
    <string name="txtIngredientes">INGREDIENTES</string>
    <!--- FIN CONTENIDO DE PLATO -->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detalle_plato">Detalle de Plato</string>

</resources>
