<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.juanpiero.cussini.DetallePlatoActivity"
    tools:showIn="@layout/activity_detalle_plato">

    <ImageView
        android:id="@+id/imgPlato"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/plato" />

    <TextView
        android:id="@+id/txtNombrePlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgPlato"
        android:text="@string/txtNombrePlato"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <RatingBar
        android:id="@+id/ratingBar2"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNombrePlato"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtCostoPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/txtNombrePlato"
        android:text="@string/txtCosto"
        android:textAlignment="textEnd"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginRight="5dp"/>

    <View
        android:id="@+id/linea"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/ratingBar2"
        android:background="#ffd5d5d5"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linea"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtIngredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtIngredientes"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="5dp"/>


    </LinearLayout>
</RelativeLayout>

